conformance/tests/tcproute-invalid-non-tcp-listener.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tcp-mixed-protocol-gateway
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: only-allow-http-routes
      protocol: HTTP
      port: 5300
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcp-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: tcp-mixed-protocol-gateway
      sectionName: only-allow-http-routes
  rules:
    - backendRefs:
        - name: tcp-echo-backend
          port: 8080
